<resources>
    <string name="app_name">SimpleHttpCamera</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="pref_test">Test Checkbox Setting</string>
    <string name="pref_test_summary">This is a Test Checkbox for your preferences</string>
    <string name="pref_camera">Camera</string>
    <string name="pref_camera_summary">The Camera to capture from</string>
    <string name="pref_catagory_camera">Camera</string>
    <string name="pref_httpd_host">Host</string>
    <string name="pref_httpd_host_summary">Host to bind Httpd Server to</string>
    <string name="pref_catagory_httpd">Httpd Server</string>
    <string name="pref_httpd_port">Port</string>
    <string name="pref_httpd_port_summary">Port to bind Httpd Server to</string>
    <string name="camera_permission_denied">Camera Permissions Denied</string>
</resources>
